added shivanis work by shreyas

--- a/notebooks/04_feature_engineering.ipynb
+++ b/notebooks/04_feature_engineering.ipynb
@@ -378,8 +378,148 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "abf3a836",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Population stack shape: (3451, 3508, 5)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import rasterio\n",
+    "import numpy as np\n",
+    "import os\n",
+    "\n",
+    "# File paths\n",
+    "pop_files = [\n",
+    "    r\"C:\\Users\\Lenovo\\Desktop\\LY MAJOR PROJECT\\data\\population\\ind_pd_2000_1km_UNadj.tif\",\n",
+    "    r\"C:\\Users\\Lenovo\\Desktop\\LY MAJOR PROJECT\\data\\population\\ind_pd_2005_1km_UNadj.tif\",\n",
+    "    r\"C:\\Users\\Lenovo\\Desktop\\LY MAJOR PROJECT\\data\\population\\ind_pd_2010_1km_UNadj.tif\",\n",
+    "    r\"C:\\Users\\Lenovo\\Desktop\\LY MAJOR PROJECT\\data\\population\\ind_pd_2015_1km_UNadj.tif\",\n",
+    "    r\"C:\\Users\\Lenovo\\Desktop\\LY MAJOR PROJECT\\data\\population\\ind_pd_2020_1km_UNadj.tif\"\n",
+    "]\n",
+    "\n",
+    "population_layers = []\n",
+    "for f in pop_files:\n",
+    "    with rasterio.open(f) as src:\n",
+    "        population_layers.append(src.read(1))\n",
+    "\n",
+    "population_stack = np.stack(population_layers, axis=-1)\n",
+    "print(\"Population stack shape:\", population_stack.shape)  # (height, width, 5)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "602aa90e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Distance-to-road shape: (7781, 7641)\n"
+     ]
+    }
+   ],
+   "source": [
+    "dist_road_path = r\"C:\\Users\\Lenovo\\Desktop\\LY MAJOR PROJECT\\data\\processed\\resampled_pop_2000.tif\"\n",
+    "with rasterio.open(dist_road_path) as src:\n",
+    "    dist_to_road = src.read(1)\n",
+    "\n",
+    "print(\"Distance-to-road shape:\", dist_to_road.shape)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "75ce13ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NDVI shape: (7781, 7641)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example Landsat bands (update filenames if different in your images folder)\n",
+    "red_band = r\"C:\\Users\\Lenovo\\Desktop\\LY MAJOR PROJECT\\data\\images\\LC09_L2SP_147047_20250902_20250904_02_T2_SR_B4.TIF\"\n",
+    "nir_band = r\"C:\\Users\\Lenovo\\Desktop\\LY MAJOR PROJECT\\data\\images\\LC09_L2SP_147047_20250902_20250904_02_T2_SR_B5.TIF\"\n",
+    "\n",
+    "with rasterio.open(red_band) as red_src, rasterio.open(nir_band) as nir_src:\n",
+    "    red = red_src.read(1).astype(\"float32\")\n",
+    "    nir = nir_src.read(1).astype(\"float32\")\n",
+    "\n",
+    "ndvi = (nir - red) / (nir + red + 1e-6)  # avoid division by zero\n",
+    "print(\"NDVI shape:\", ndvi.shape)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "b25a6836",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Final features stack shape: (3451, 3508, 7)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Align shapes if needed\n",
+    "min_shape = (\n",
+    "    min(population_stack.shape[0], dist_to_road.shape[0], ndvi.shape[0]),\n",
+    "    min(population_stack.shape[1], dist_to_road.shape[1], ndvi.shape[1])\n",
+    ")\n",
+    "\n",
+    "# Crop arrays to same shape\n",
+    "population_stack = population_stack[:min_shape[0], :min_shape[1], :]\n",
+    "dist_to_road = dist_to_road[:min_shape[0], :min_shape[1]]\n",
+    "ndvi = ndvi[:min_shape[0], :min_shape[1]]\n",
+    "\n",
+    "# Final feature stack\n",
+    "features_stack = np.dstack([population_stack, dist_to_road, ndvi])\n",
+    "print(\"Final features stack shape:\", features_stack.shape)  \n",
+    "# Example: (height, width, 7) → 5 pop layers + 1 road + 1 NDVI\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "9be7728c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Saved feature stack at: C:\\Users\\Lenovo\\Desktop\\LY MAJOR PROJECT\\data\\processed\\features_stack.npz\n"
+     ]
+    }
+   ],
+   "source": [
+    "out_path = r\"C:\\Users\\Lenovo\\Desktop\\LY MAJOR PROJECT\\data\\processed\\features_stack.npz\"\n",
+    "os.makedirs(os.path.dirname(out_path), exist_ok=True)\n",
+    "\n",
+    "np.savez_compressed(out_path, features=features_stack)\n",
+    "print(\"✅ Saved feature stack at:\", out_path)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e8f37cb2",
    "metadata": {},
    "outputs": [],
    "source": []
